# engine

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
components/: chord.py  chord_progression.py  chord_voicer.py  interval.py  note.py  pitch.py  pitch_collection.py  pitch_set.py  roll.py
components/rolls/: __init__.py  piano.py
deploy_to_gcloud/: compile_yaml.py  run.sh  service.yaml
lib/: pydantic_addons.py
playground/: autocorrelation_pitch_detection.ipynb  cepstrum_pitch_detection.ipynb  chord_progression_generation_test.ipynb  generate.ipynb  midi_import_test.ipynb  pitch_detection_common.py  song_test.ipynb  stride_piano_test.ipynb  test_chords.ipynb  voice_sample_test.ipynb
playground/data/: piranha_plants.mid  port_cobh.mid  siiva.mid
playground/songs/: first.py  happy_birthday.py
src/: app.py  env.py  logger.py  main.py
src/common/: arrangement.py  arrangement_generator.py  audio_data.py  audio_sample.py  audio_sample_manager.py  chord.py  chord_progression.py  chord_voicer.py  conversions.py  note.py  note_collection.py  note_sequence.py  part.py  pitch.py  roll.py  util.py  voice_sample_library.py
src/export/: arrangement.py  arrangement_generator.py  part.py
src/generation/: chord_progression.py  chord_progression_generator.py  chord_voicer.py  observation_matrix.py  transition_matrix.py  viterbi.py
src/instruments/: base.py  piano.py
src/melody_extraction/: melody_extractor.py  note_collection_builder.py  pitch_detector.py  util.py
transformers/: chord.py  interval.py  pitch.py
(+44 files in other folders)
