[project]
name = "piranha-plants-as-charade"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "3.11.*"
dependencies = [
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "midiutil (>=1.2.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (==2.1)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
